--- a/web/app/themes/openmedia/style.css
+++ b/web/app/themes/openmedia/style.css
@@ -111,3 +111,25 @@ button:hover, button:focus, input[type="submit"]:hover, input[type="button"]:hov
 .entry-title a:hover {
 	color: #037480;
 }
+
+
+/* MailChimp join form */
+.mc4wp-form {
+	margin: 20px 0;
+}
+
+.join-form {
+	max-width: 600px;
+	margin: 0 auto;
+}
+
+.mc4wp-form .join-form input.email {
+	display: inline-block;
+	width: 60%;
+	padding: 10px 15px;
+}
+
+.mc4wp-form .join-form input.submit {
+	display: inline-block;
+	width: 36%;
+}
