Make the top menu fit in 750px

--- a/web/app/themes/openmedia/style.css
+++ b/web/app/themes/openmedia/style.css
@@ -78,6 +78,7 @@ body {
 	color: #000;
 }
 
+.main-navigation,
 .entry-header,
 .entry-content,
 .entry-summary,
@@ -86,8 +87,9 @@ body {
 	max-width: 750px;
 }
 
-ul.nav-menu, div.nav-menu > ul {
-	margin: 0 0 0 150px;
+ul.nav-menu,
+div.nav-menu > ul {
+	margin: 0 0 0 -20px;
 }
 
 #post-2 > header > h1 {
